--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container" style="margin-top: 100px;">
     <ul>
         <li *ngFor="let user of users">
-            {{user.id}} - {{user.userName}}
+            {{user.id}} - {{user.username}}
         </li>
     </ul>
 </div>
