--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
     <a class="navbar-brand" href="#">Masseur Appointment</a>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
       <li class="nav-item">
         <a class="nav-link" aria-current="page" href="#">Matches</a>
       </li>
@@ -12,10 +12,19 @@
         <a class="nav-link">Messages</a>
       </li>
     </ul>
-    <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+
+    <div class="dropdown" *ngIf="loggedIn" dropdown>
+      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome User</a>
+      <div class="dropdown-menu" *dropdownMenu>
+        <a class="dropdown-item">Edit Profile</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div>
+
+    <form *ngIf="!loggedIn" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
       <input 
         name="username"
-        [(ngModel)]="model.userName"
+        [(ngModel)]="model.username"
         class="form-control me-2"
         type="text"
         placeholder="Username"
