Client display moderation photos for the authorized user

--- a/client/src/app/members/photo-editor/photo-editor.component.css
+++ b/client/src/app/members/photo-editor/photo-editor.component.css
@@ -5,3 +5,12 @@
 input[type=file] {
     color: transparent;
 }
+
+.approval-text {
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  font-weight: bold;
+  color: red;
+  text-align: right;
+}
