Client photo moderation functionality

--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -35,7 +35,7 @@
       <button class="btn btn-sm btn-danger"
               style="margin-left: 2px;"
               [disabled]="photo.isMain"
-              (click)="deletePhoto(photo.id)">
+              (click)="deleteModerationPhoto(photo.id)">
         <i class="fa fa-trash"></i>
       </button>
     </div>
