--- a/client/src/app/admin/photo-management/photo-management.component.html
+++ b/client/src/app/admin/photo-management/photo-management.component.html
@@ -1,1 +1,31 @@
-<p>photo-management works!</p>
+<div class="row mb-3">
+  <div class="col-2 mb-1" *ngFor="let photo of moderationPhotos">
+    <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail mb-1">
+    <div class="text-center">
+      <button class="btn btn-sm btn-success active"
+              style="margin-right: 2px;"
+              (click)="moderatePhoto(photo.id, true)">
+        Approve
+      </button>
+      <button class="btn btn-sm btn-danger active"
+              style="margin-right: 2px;"
+              (click)="moderatePhoto(photo.id, false)">
+        Reject
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="moderationPhotos.length > 0">
+  <pagination [boundaryLinks]="true"
+              [totalItems]="pagination.totalItems"
+              [itemsPerPage]="pagination.itemsPerPage"
+              [maxSize]="10"
+              [(ngModel)]="pagination.currentPage"
+              (pageChanged)="pageChanged($event)"
+              previousText="&lsaquo;"
+              nextText="&rsaquo;"
+              firstText="&laquo;"
+              lastText="&raquo;">
+  </pagination>
+</div>
