--- a/client/src/app/admin/photo-management/photo-management.component.html
+++ b/client/src/app/admin/photo-management/photo-management.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-3">
-  <div class="col-2 mb-1" *ngFor="let photo of moderationPhotos">
+  <div class="col-2 mb-1" *ngFor="let photo of (adminService.moderationPhotos$ | async)">
     <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail mb-1">
     <div class="text-center">
       <button class="btn btn-sm btn-success active"
@@ -14,18 +14,4 @@
       </button>
     </div>
   </div>
-</div>
-
-<div class="d-flex justify-content-center" *ngIf="moderationPhotos.length > 0">
-  <pagination [boundaryLinks]="true"
-              [totalItems]="pagination.totalItems"
-              [itemsPerPage]="pagination.itemsPerPage"
-              [maxSize]="10"
-              [(ngModel)]="pagination.currentPage"
-              (pageChanged)="pageChanged($event)"
-              previousText="&lsaquo;"
-              nextText="&rsaquo;"
-              firstText="&laquo;"
-              lastText="&raquo;">
-  </pagination>
 </div>
